force-app/main/default/objects/Advanced_Days__c/Advanced_Days__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>LOB In Advance Days</description>
    <label>Advanced Days</label>
</CustomObject>