force-app/main/default/objects/Advanced_Days__c/fields/isSeasonal__c.field-meta.xml
<CustomField>
    <fullName>isSeasonal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSeasonal</label>
    <type>Checkbox</type>
</CustomField>