force-app/main/default/objects/Advanced_Days__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <length>60</length>
    <type>Text</type>
</CustomField>