force-app/main/default/objects/Advanced_Days__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>isSeasonal__c</columns>
    <columns>NAME</columns>
    <columns>LOB__c</columns>
    <columns>Type__c</columns>
    <columns>Days__c</columns>
    <columns>Frequency__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>SETUP_TYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>